# Django_test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  home.html  manage.py  package-lock.json  package.json  poetry.exe.stackdump  pyproject.toml  requ.txt  requirements.txt  setup.cfg
HTML_CSS_JS/: HTML_practise.html
api/: db.sqlite3  settings.py  urls.py  wsgi.py
api/api/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_todo.py  0003_remove_post_image.py  0004_book_alter_post_slug.py  0005_author_alter_book_author.py  0006_book_new_author.py  0007_remove_book_new_author_alter_book_author.py  0008_rename_author_booksauthor.py  0009_alter_post_content_alter_post_description.py
test/: tests.py
