[project]
name = "django-test"
version = "0.1.0"
description = ""
authors = [
    {name = "igoruxa007",email = "igoruxa007@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-ckeditor (>=6.7.2,<7.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
